created basic recipe

--- a/home.html
+++ b/home.html
@@ -5,13 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Site</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="recipe-list.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Recipe Site</h1>
+        <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
-        <h2>Explore delicious recipes from around the world!</>
+        <h1>Explore delicious recipes from around the world!</h1>
+        <ul class="recipe-grid">
+            <li class="recipe-item">
+                <a href="recipe1.html">
+                    <img src="recipe1.jpg" alt="Recipe 1">
+                    <h2>Recipe 1</h2>
+                    <p>A short description of Recipe 1.</p>
+                    <div class="tags">
+                        <span class="tag">Vegetarian</span>
+                        <span class="tag">Quick</span>
+                    </div>
+                </a>
+            </li>
+            <li class="recipe-item">
+                <a href="recipe2.html">
+                    <img src="recipe2.jpg" alt="Recipe 2">
+                    <h2>Recipe 2</h2>
+                    <p>A short description of Recipe 2.</p>
+                    <div class="tags">
+                        <span class="tag">Vegan</span>
+                        <span class="tag">Spicy</span>
+                    </div>
+                </a>
+            </li>
+            <li class="recipe-item">
+                <a href="recipe3.html">
+                    <img src="recipe3.jpg" alt="Recipe 3">
+                    <h2>Recipe 3</h2>
+                    <p>A short description of Recipe 3.</p>
+                    <div class="tags">
+                        <span class="tag">Gluten-Free</span>
+                        <span class="tag">Healthy</span>
+                    </div>
+                </a>
+            </li>
+            <li class="recipe-item">
+                <a href="recipe4.html">
+                    <img src="recipe4.jpg" alt="Recipe 4">
+                    <h2>Recipe 4</h2>
+                    <p>A short description of Recipe 4.</p>
+                    <div class="tags">
+                        <span class="tag">Dessert</span>
+                        <span class="tag">Sweet</span>
+                    </div>
+                </a>
+            </li>
+            <li class="recipe-item">
+                <a href="recipe5.html">
+                    <img src="recipe5.jpg" alt="Recipe 5">
+                    <h2>Recipe 5</h2>
+                    <p>A short description of Recipe 5.</p>
+                    <div class="tags">
+                        <span class="tag">Low-Carb</span>
+                        <span class="tag">Quick</span>
+                    </div>
+                </a>
+            </li>
+            <li class="recipe-item">
+                <a href="recipe6.html">
+                    <img src="recipe6.jpg" alt="Recipe 6">
+                    <h2>Recipe 6</h2>
+                    <p>A short description of Recipe 6.</p>
+                    <div class="tags">
+                        <span class="tag">Keto</span>
+                        <span class="tag">Savory</span>
+                    </div>
+                </a>
+            </li>
+        </ul>
     </main>
     <footer>
         <p>&copy; 2025 Peder S. All rights reserved.</p>
