seperated css files into usage

--- a/plain-cake.html
+++ b/plain-cake.html
@@ -4,26 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Site</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="recipe-details.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/recipe-details.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/layout.css">
+    <link rel="stylesheet" href="assets/css/components.css">
 </head>
 <body>
     <header>
         <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
-        <h1>Recipe 1 Name</h1>
-        <p>A short description of Recipe 1.</p>
-        <div class="tags">
-            <span class="tag">Vegetarian</span>
-            <span class="tag">Quick</span>
+        <h1>Plain Cake</h1>
+        <div class="recipe-intro">
+            <img src="assets/images/plain-cake.jpg" alt="Plain Cake" class="recipe-image">
+            <p>This is just a boring plain cake</p>
+            <p class="image-license">Image licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">Attribution-NonCommercial-NoDerivs</a> by <a href="https://www.flickr.com/photos/reid-bee/">Reid Bee</a></p>
         </div>
+        
         <section class="recipe-details">
             <div class="recipe-info">
                 <p><strong>Serves:</strong> 4 people</p>
                 <p><strong>Prep Time:</strong> 10 minutes</p>
                 <p><strong>Cook Time:</strong> 25 minutes</p>
                 <p><strong>Total Time:</strong> 35 minutes</p>
+                <div class="tags">
+                    <a href="tags/vegetarian.html" class="tag">Vegetarian</a>
+                    <a href="tags/dessert.html" class="tag">Dessert</a>
+                </div>
             </div>
             <div class="ingredients-tools">
             <ul class="ingredients-list">
