--- a/home.html
+++ b/home.html
@@ -4,79 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Site</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="recipe-list.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/recipe-list.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/layout.css">
+    <link rel="stylesheet" href="assets/css/components.css">
 </head>
 <body>
     <header>
         <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
-        <h1>Explore delicious recipes from around the world!</h1>
+        <h1>Explore delicious recipes right now!</h1>
         <ul class="recipe-grid">
             <li class="recipe-item">
-                <a href="recipe1.html">
-                    <img src="recipe1.jpg" alt="Recipe 1">
-                    <h2>Recipe 1</h2>
-                    <p>A short description of Recipe 1.</p>
-                    <div class="tags">
-                        <span class="tag">Vegetarian</span>
-                        <span class="tag">Quick</span>
-                    </div>
+                <a href="plain-cake.html">
+                    <img src="assets/images/plain-cake.jpg" alt="Recipe 1">
+                    <h2>Plain Cake</h2>
+                    <p>A very boring plain cake.</p>
                 </a>
+                <p class="image-license">Image licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">Attribution-NonCommercial-NoDerivs</a> by <a href="https://www.flickr.com/photos/reid-bee/">Reid Bee</a></p>
+                <div class="tags">
+                    <a href="tags/vegetarian.html" class="tag">Vegetarian</a>
+                    <a href="tags/dessert.html" class="tag">Dessert</a>
+                </div>
             </li>
             <li class="recipe-item">
-                <a href="recipe2.html">
-                    <img src="recipe2.jpg" alt="Recipe 2">
-                    <h2>Recipe 2</h2>
-                    <p>A short description of Recipe 2.</p>
-                    <div class="tags">
-                        <span class="tag">Vegan</span>
-                        <span class="tag">Spicy</span>
-                    </div>
+                <a href="tonkatsu.html">
+                    <img src="assets/images/tonkatsu.jpg" alt="Recipe 2">
+                    <h2>Tonkatsu</h2>
+                    <p>Because who doesn't love fried food.</p>
                 </a>
+                <p class="image-license">Photo by <a href="https://unsplash.com/@milkbox?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ryan Kwok</a> on <a href="https://unsplash.com/photos/brown-pastry-on-stainless-steel-tray-d2RYC06lRV0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+                <div class="tags">
+                    <a href="tags/fried.html" class="tag">Fried</a>
+                    <a href="tags/japanese.html" class="tag">Japanese</a>
+                </div>
             </li>
             <li class="recipe-item">
                 <a href="recipe3.html">
-                    <img src="recipe3.jpg" alt="Recipe 3">
+                    <img src="assets/images/recipe3.jpg" alt="Recipe 3">
                     <h2>Recipe 3</h2>
                     <p>A short description of Recipe 3.</p>
                     <div class="tags">
-                        <span class="tag">Gluten-Free</span>
-                        <span class="tag">Healthy</span>
+                        <a href="tags/gluten-free.html" class="tag">Gluten-Free</a>
+                        <a href="tags/healthy.html" class="tag">Healthy</a>
                     </div>
                 </a>
             </li>
             <li class="recipe-item">
                 <a href="recipe4.html">
-                    <img src="recipe4.jpg" alt="Recipe 4">
+                    <img src="assets/images/recipe4.jpg" alt="Recipe 4">
                     <h2>Recipe 4</h2>
                     <p>A short description of Recipe 4.</p>
                     <div class="tags">
-                        <span class="tag">Dessert</span>
-                        <span class="tag">Sweet</span>
+                        <a href="tags/dessert.html" class="tag">Dessert</a>
+                        <a href="tags/sweet.html" class="tag">Sweet</a>
                     </div>
                 </a>
             </li>
             <li class="recipe-item">
                 <a href="recipe5.html">
-                    <img src="recipe5.jpg" alt="Recipe 5">
+                    <img src="assets/images/recipe5.jpg" alt="Recipe 5">
                     <h2>Recipe 5</h2>
                     <p>A short description of Recipe 5.</p>
                     <div class="tags">
-                        <span class="tag">Low-Carb</span>
-                        <span class="tag">Quick</span>
+                        <a href="tags/low-carb.html" class="tag">Low-Carb</a>
+                        <a href="tags/quick.html" class="tag">Quick</a>
                     </div>
                 </a>
             </li>
             <li class="recipe-item">
                 <a href="recipe6.html">
-                    <img src="recipe6.jpg" alt="Recipe 6">
+                    <img src="assets/images/recipe6.jpg" alt="Recipe 6">
                     <h2>Recipe 6</h2>
                     <p>A short description of Recipe 6.</p>
                     <div class="tags">
-                        <span class="tag">Keto</span>
-                        <span class="tag">Savory</span>
+                        <a href="tags/keto.html" class="tag">Keto</a>
+                        <a href="tags/savory.html" class="tag">Savory</a>
                     </div>
                 </a>
             </li>
