--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Site</title>
@@ -10,83 +11,103 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/layout.css">
     <link rel="stylesheet" href="assets/css/components.css">
+    <link rel="stylesheet" href="assets/css/sidebar.css">
+    <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
-        <h1>Explore delicious recipes right now!</h1>
-        <ul class="recipe-grid">
-            <li class="recipe-item">
-                <a href="plain-cake.html">
-                    <img src="assets/images/plain-cake.jpg" alt="Recipe 1">
-                    <h2>Plain Cake</h2>
-                    <p>A very boring plain cake.</p>
-                </a>
-                <p class="image-license">Image licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">Attribution-NonCommercial-NoDerivs</a> by <a href="https://www.flickr.com/photos/reid-bee/">Reid Bee</a></p>
-                <div class="tags">
-                    <a href="tags/vegetarian.html" class="tag">Vegetarian</a>
-                    <a href="tags/dessert.html" class="tag">Dessert</a>
-                </div>
-            </li>
-            <li class="recipe-item">
-                <a href="tonkatsu.html">
-                    <img src="assets/images/tonkatsu.jpg" alt="Recipe 2">
-                    <h2>Tonkatsu</h2>
-                    <p>Because who doesn't love fried food.</p>
-                </a>
-                <p class="image-license">Photo by <a href="https://unsplash.com/@milkbox?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ryan Kwok</a> on <a href="https://unsplash.com/photos/brown-pastry-on-stainless-steel-tray-d2RYC06lRV0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-                <div class="tags">
-                    <a href="tags/fried.html" class="tag">Fried</a>
-                    <a href="tags/japanese.html" class="tag">Japanese</a>
-                </div>
-            </li>
-            <li class="recipe-item">
-                <a href="recipe3.html">
-                    <img src="assets/images/recipe3.jpg" alt="Recipe 3">
-                    <h2>Recipe 3</h2>
-                    <p>A short description of Recipe 3.</p>
+        <div class="sidebar">
+            <ul class="sidebar-menu">
+                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="tags.html"><i class="fas fa-tags"></i> Tags</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1 class="page-heading">Explore delicious recipes right now!</h1>
+            <ul class="recipe-grid">
+                <li class="recipe-item">
+                    <a href="recipes/plain-cake.html">
+                        <img src="assets/images/plain-cake.jpg" alt="Recipe 1">
+                        <h2>Plain Cake</h2>
+                        <p>A very boring plain cake.</p>
+                    </a>
+                    <p class="image-license">Image licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">Attribution-NonCommercial-NoDerivs</a> by <a href="https://www.flickr.com/photos/reid-bee/">Reid Bee</a></p>
                     <div class="tags">
-                        <a href="tags/gluten-free.html" class="tag">Gluten-Free</a>
-                        <a href="tags/healthy.html" class="tag">Healthy</a>
-                    </div>
-                </a>
-            </li>
-            <li class="recipe-item">
-                <a href="recipe4.html">
-                    <img src="assets/images/recipe4.jpg" alt="Recipe 4">
-                    <h2>Recipe 4</h2>
-                    <p>A short description of Recipe 4.</p>
-                    <div class="tags">
+                        <a href="tags/vegetarian.html" class="tag">Vegetarian</a>
                         <a href="tags/dessert.html" class="tag">Dessert</a>
-                        <a href="tags/sweet.html" class="tag">Sweet</a>
                     </div>
-                </a>
-            </li>
-            <li class="recipe-item">
-                <a href="recipe5.html">
-                    <img src="assets/images/recipe5.jpg" alt="Recipe 5">
-                    <h2>Recipe 5</h2>
-                    <p>A short description of Recipe 5.</p>
+                </li>
+                <li class="recipe-item">
+                    <a href="recipes/tonkatsu.html">
+                        <img src="assets/images/tonkatsu.jpg" alt="Recipe 2">
+                        <h2>Tonkatsu</h2>
+                        <p>Because who doesn't love fried food.</p>
+                    </a>
+                    <p class="image-license">Photo by <a href="https://unsplash.com/@milkbox?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ryan Kwok</a> on <a href="https://unsplash.com/photos/brown-pastry-on-stainless-steel-tray-d2RYC06lRV0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
                     <div class="tags">
-                        <a href="tags/low-carb.html" class="tag">Low-Carb</a>
-                        <a href="tags/quick.html" class="tag">Quick</a>
+                        <a href="tags/fried.html" class="tag">Fried</a>
+                        <a href="tags/japanese.html" class="tag">Japanese</a>
                     </div>
-                </a>
-            </li>
-            <li class="recipe-item">
-                <a href="recipe6.html">
-                    <img src="assets/images/recipe6.jpg" alt="Recipe 6">
-                    <h2>Recipe 6</h2>
-                    <p>A short description of Recipe 6.</p>
+                </li>
+                <li class="recipe-item">
+                    <a href="recipes/onigiri.html">
+                        <img src="assets/images/onigiri.jpg" alt="Recipe 1">
+                        <h2>Onigiri</h2>
+                        <p>Rice and Filling, what more could anyone ever need?</p>
+                    </a>
+                    <p class="image-license">Photo by <a href="https://unsplash.com/@themangomonster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daniel Téllez Girón</a> on <a href="https://unsplash.com/photos/a-piece-of-sushi-sitting-on-top-of-a-wooden-cutting-board-ZOINPNtpvGI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+                    </p>
                     <div class="tags">
-                        <a href="tags/keto.html" class="tag">Keto</a>
-                        <a href="tags/savory.html" class="tag">Savory</a>
+                        <a href="tags/japanese.html" class="tag">Japanese</a>
+                        <a href="tags/lunch.html" class="tag">Lunch</a>
                     </div>
-                </a>
-            </li>
-        </ul>
+                </li>
+                <li class="recipe-item">
+                    <a href="recipes/plain-cake.html">
+                        <img src="assets/images/plain-cake.jpg" alt="Recipe 1">
+                        <h2>Plain Cake</h2>
+                        <p>A very boring plain cake.</p>
+                    </a>
+                    <p class="image-license">Image licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">Attribution-NonCommercial-NoDerivs</a> by <a href="https://www.flickr.com/photos/reid-bee/">Reid Bee</a></p>
+                    <div class="tags">
+                        <a href="tags/vegetarian.html" class="tag">Vegetarian</a>
+                        <a href="tags/dessert.html" class="tag">Dessert</a>
+                    </div>
+                </li>
+                <li class="recipe-item">
+                    <a href="recipes/tonkatsu.html">
+                        <img src="assets/images/tonkatsu.jpg" alt="Recipe 2">
+                        <h2>Tonkatsu</h2>
+                        <p>Because who doesn't love fried food.</p>
+                    </a>
+                    <p class="image-license">Photo by <a href="https://unsplash.com/@milkbox?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ryan Kwok</a> on <a href="https://unsplash.com/photos/brown-pastry-on-stainless-steel-tray-d2RYC06lRV0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+                    <div class="tags">
+                        <a href="tags/fried.html" class="tag">Fried</a>
+                        <a href="tags/japanese.html" class="tag">Japanese</a>
+                    </div>
+                </li>
+                <li class="recipe-item">
+                    <a href="recipes/onigiri.html">
+                        <img src="assets/images/onigiri.jpg" alt="Recipe 1">
+                        <h2>Onigiri</h2>
+                        <p>Rice and Filling, what more could anyone ever need?</p>
+                    </a>
+                    <p class="image-license">Photo by <a href="https://unsplash.com/@themangomonster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daniel Téllez Girón</a> on <a href="https://unsplash.com/photos/a-piece-of-sushi-sitting-on-top-of-a-wooden-cutting-board-ZOINPNtpvGI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+                    </p>
+                    <div class="tags">
+                        <a href="tags/japanese.html" class="tag">Japanese</a>
+                        <a href="tags/lunch.html" class="tag">Lunch</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="sidebar"/>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Peder S. All rights reserved.</p>
