--- a/tags.html
+++ b/tags.html
@@ -32,6 +32,7 @@
         <div class="content">
             <h1 class="page-heading">Welcome to the Recipe Tags page!</h1>
             <h3>Click on a tag to see all recipes with that tag!</h3>
+            <h5>The only one that works right now is Japanese</h5>
             <div class="tags-container">
                 <ul class="tags-list">
                     <li class="tags"><a class="tag" href="tags/vegetarian.html">Vegetarian</a></li>
