replaced sidebar in home with js edition

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
+    <script src="assets/js/sidebar.js"></script>
 </head>
 <body>
     <header>
