extracted sidebar/header/footer

--- a/recipes/tonkatsu.html
+++ b/recipes/tonkatsu.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/layout.css">
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <script src="assets/js/load-components.js" defer></script>
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,12 +21,6 @@
     </header>
     <main>
         <div class="sidebar">
-            <ul class="sidebar-menu">
-                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="tags.html"><i class="fas fa-tags"></i> Tags</a></li>
-            </ul>
         </div>
         <div class="content">
             <h1>Tonkatsu</h1>
@@ -75,12 +70,9 @@
                     <li class="instruction-step">Eat with rice, cabbage, curry, or whatever your heart desires</li>
                 </ol>
             </section>
-        </div>  
-        <div class="sidebar"/>
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 Peder S. All rights reserved.</p>
     </footer>
 </body>
 </html>
