--- a/contact.html
+++ b/contact.html
@@ -12,20 +12,14 @@
     <link rel="stylesheet" href="assets/css/layout.css">
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <script src="assets/js/load-components.js" defer></script>
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
         <div class="sidebar">
-            <ul class="sidebar-menu">
-                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="tags.html"><i class="fas fa-tags"></i> Tags</a></li>
-            </ul>
         </div>
         <div class="content">
             <h1 class="page-heading">Contact Me!</h1>
@@ -36,11 +30,8 @@
                 <p><i class="fa-brands fa-gitlab"></i> Gitlab: <a href="https://code.vt.edu/peders" target="_blank">peders@vt.edu</a></p>
             </div>
         </div>
-        <div class="sidebar"/>
-        </div>
     </main>
     <footer>
-        <p>&copy; 2025 Peder S. All rights reserved.</p>
     </footer>
 </body>
 </html>
