--- a/home.html
+++ b/home.html
@@ -13,21 +13,13 @@
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
-    <script src="assets/js/sidebar.js"></script>
+
+    <script src="assets/js/load-components.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1><a href="home.html">Welcome to Recipe Site</a></h1>
-    </header>
+    <header></header>
     <main>
-        <div class="sidebar">
-            <ul class="sidebar-menu">
-                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="tags.html"><i class="fas fa-tags"></i> Tags</a></li>
-            </ul>
-        </div>
+        <div class="sidebar"></div>
         <div class="content">
             <h1 class="page-heading">Explore delicious recipes right now!</h1>
             <ul class="recipe-grid">
@@ -107,11 +99,7 @@
                 </li>
             </ul>
         </div>
-        <div class="sidebar"/>
-        </div>
     </main>
-    <footer>
-        <p>&copy; 2025 Peder S. All rights reserved.</p>
-    </footer>
+    <footer></footer>
 </body>
 </html>
