--- a/tags.html
+++ b/tags.html
@@ -13,21 +13,15 @@
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/tags.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <script src="assets/js/load-components.js" defer></script>
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1><a href="home.html">Welcome to Recipe Site</a></h1>
     </header>
     <main>
         
         <div class="sidebar">
-            <ul class="sidebar-menu">
-                <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="tags.html"><i class="fas fa-tags"></i> Tags</a></li>
-            </ul>
         </div>
         <div class="content">
             <h1 class="page-heading">Welcome to the Recipe Tags page!</h1>
@@ -51,12 +45,9 @@
                 </ul>
             </div>
         </div>
-        <div class="sidebar">
-        </div>
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 Peder S. All rights reserved.</p>
     </footer>
 </body>
 </html>
