--- a/recipes/tonkatsu.html
+++ b/recipes/tonkatsu.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/layout.css">
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico">
     <script src="assets/js/load-components.js" defer></script>
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
 </head>
