dynamic tags list

--- a/tags.html
+++ b/tags.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/sidebar.css">
     <script src="assets/js/load-components.js" defer></script>
     <script src="https://kit.fontawesome.com/8725ebc5c8.js" crossorigin="anonymous"></script>
+    <script src="assets/js/get-all-tags.js" defer></script>
 </head>
 <body>
     <header>
@@ -27,23 +28,8 @@
         <div class="content">
             <h1 class="page-heading">Welcome to the Recipe Tags page!</h1>
             <h3>Click on a tag to see all recipes with that tag!</h3>
-            <h5>The only one that works right now is Japanese</h5>
             <div class="tags-container">
                 <ul class="tags-list">
-                    <li class="tags"><a class="tag" href="tags/vegetarian.html">Vegetarian</a></li>
-                    <li class="tags"><a class="tag" href="tags/vegan.html">Vegan</a></li>
-                    <li class="tags"><a class="tag" href="tags/gluten-free.html">Gluten-Free</a></li>
-                    <li class="tags"><a class="tag" href="tags/dairy-free.html">Dairy-Free</a></li>
-                    <li class="tags"><a class="tag" href="tags/low-carb.html">Low Carb</a></li>
-                    <li class="tags"><a class="tag" href="tags/high-protein.html">High Protein</a></li>
-                    <li class="tags"><a class="tag" href="tags/quick-meals.html">Quick Meals</a></li>
-                    <li class="tags"><a class="tag" href="tags/desserts.html">Desserts</a></li>
-                    <li class="tags"><a class="tag" href="tags/breakfast.html">Breakfast</a></li>
-                    <li class="tags"><a class="tag" href="tags/snacks.html">Snacks</a></li>
-                    <li class="tags"><a class="tag" href="tags/holiday.html">Holiday</a></li>
-                    <li class="tags"><a class="tag" href="tags/international.html">International</a></li>
-                    <li class="tags"><a class="tag" href="tags/japanese.html">Japanese</a></li>
-                </ul>
             </div>
         </div>
         </div>
